more alignment fixes on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -3007,7 +3007,7 @@ header p{
     padding: 20px;
     border-radius: 10px;
     text-align: justify;
-    padding-bottom: 25px;
+    padding-bottom: 9%;
     
     
     
@@ -3212,7 +3212,7 @@ header p{
 
 
 #team2div {
-    height: 250px;
+    height: 270px;
     width: 100%;
      background: #FAFAFA;
     border-radius: 10px;
